# reviro_internship

./: .env  .env.test  .env.web  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.test.yaml  compose.web.yaml  models.drawio  pyproject.toml  pytest.ini  requirements.txt  schema.yml
company/: admin.py  models.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py
core/: settings.py  urls.py
tests/: Untitled Diagram.drawio  conftest.py  factories.py  test_company_api.py  test_product_api.py
tests/postman/: Reviro_Django.postman_collection.json  Reviro_Django.postman_environment.json
